New probe method, backend selection in config, refactoring